examples/test/testpolicy80.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy80
  namespace: namespace397
spec:
  podSelector:
    matchLabels:
      key29: value45
      key7: value20
      key27: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value21
          key7: value22
          key18: value21
      podSelector:
        matchLabels:
          key7: value28
